# swift-hf-api

./: .gitignore  LICENSE  Package.resolved  Package.swift  README.md
.github/actions/build-host-artifactbundle/: action.yml
.github/actions/select-xcode/: action.yml
.github/actions/verify-expected-commit/: action.yml
.github/workflows/: ci.yml  rust-release.yml
Sources/HFAPI/Cache/: CacheDeletion.swift  CacheInfo+Conveniences.swift  CacheInfo.swift  CachePathResolver.swift  GlobMatcher.swift
Sources/HFAPI/Client/: Auth.swift  HFClient+Cache.swift  HFClient+Lifecycle.swift  HFClient+Listing.swift  HFClient+Users.swift  HFClient.swift  TokenProviderAdapter.swift
Sources/HFAPI/Errors/: HFError.swift
Sources/HFAPI/Hub/: AccessRequest.swift  Dataset.swift  Discussion.swift  Git.swift  HubCache.swift  HubClient+Datasets.swift  HubClient+Discussions.swift  HubClient+Files.swift  HubClient+Git.swift  HubClient+Models.swift  HubClient+Repos.swift  HubClient+User.swift  HubClient.swift  Model.swift  Organization.swift  Paper.swift  Repo.swift  ResourceGroup.swift  Space.swift  User.swift
Sources/HFAPI/InferenceProviders/: ChatCompletion.swift  FeatureExtraction.swift  InferenceClient.swift  TextToImage.swift
Sources/HFAPI/Network/: NetworkMonitor.swift
Sources/HFAPI/OAuth/: HuggingFaceAuthenticationManager.swift  OAuthClient.swift
Sources/HFAPI/Progress/: DownloadEvent.swift  DownloadProgressState.swift  OperationHandle.swift  UploadEvent.swift
Sources/HFAPI/Repository/: CommitInfo.swift  CommitOperation.swift  CommitsAndDiffs.swift  DatasetInfo.swift  DatasetRepository.swift  HubTimestamp.swift  ModelInfo.swift  ModelRepository.swift  NetworkAccess.swift  RepoLifecycle.swift  RepoTreeEntry.swift  RepositoryDownload.swift  RepositoryID.swift  RepositoryProtocol+Conveniences.swift  RepositoryProtocol+Defaults.swift  RepositoryProtocol+Internal.swift  RepositoryProtocol+PolymorphicDefaults.swift  RepositoryProtocol.swift  UploadStream.swift
Sources/HFAPI/Shared/: HTTPClient.swift  MultipartBuilder.swift  TokenProvider.swift
Sources/HFAPI/Shared/Extensions/: JSONDecoder+Extensions.swift  URL+Extensions.swift
Sources/HFAPI/Users/: User.swift
Sources/HFAPIFFI/Resources/: PrivacyInfo.xcprivacy
Sources/HFAPIHubAuth/: OAuthClientFactory.swift
Sources/HFAPIOAuth/: OAuthClient.swift  OAuthManager.swift  TokenProvider+OAuth.swift  TokenStorage.swift
Sources/HFAPIShared/: HFLog.swift  TokenProvider.swift
Sources/HuggingFace/Hub/: Billing.swift  Collection.swift  CommaSeparatedList.swift  Dataset.swift  File.swift  HubCache.swift  HubClient+Collections.swift  HubClient+Datasets.swift  HubClient+Files.swift  HubClient+Models.swift  HubClient+OAuth.swift  HubClient+Organizations.swift  HubClient+Papers.swift  HubClient+Repos.swift  HubClient+Spaces.swift  HubClient.swift  Model.swift  OAuth.swift  Pagination.swift  Repo.swift  Space.swift  Tags.swift
Sources/HuggingFace/InferenceProviders/: Message.swift  Provider.swift  SpeechToText.swift  TextToVideo.swift
Sources/HuggingFace/OAuth/: HuggingFaceAuthenticationManager.swift  TokenStorage.swift
Sources/HuggingFace/Shared/: CacheLocationProvider.swift  FileLock.swift  FileLockOriginal.swift  HTTPClient.swift  NetworkMonitor.swift  Value.swift
Sources/HuggingFace/Shared/Extensions/: Data+Extensions.swift  URLSession+Linux.swift
Tests/Benchmarks/: Benchmarks.swift  DownloadBenchmarks.swift  DownloaderBridge.swift
Tests/HFAPIHubAuthTests/: OAuthClientFactoryTests.swift
Tests/HFAPIOAuthTests/: HuggingFaceAuthenticationManagerTests.swift  OAuthClientTests.swift  TokenStorageTests.swift
Tests/HFAPIOAuthTests/Helpers/: MockURLProtocol.swift
Tests/HFAPITests/: BranchTagTests.swift  CacheDeletionTests.swift  CacheInfoConveniencesTests.swift  CacheScanTests.swift  CachedSnapshotTests.swift  ClientTests.swift  ContentLengthSignalTests.swift  ConvenienceTests.swift  CreateCommitTests.swift  DeleteFileTests.swift  DownloadFlavorTests.swift  DownloadProgressStateTests.swift  DownloadTests.swift  ErrorMappingTests.swift  ErrorTests.swift  GlobMatcherTests.swift  HubMutationGate.swift  LifecycleTests.swift  ListingTests.swift  MutationTestContext.swift  RepositoryCommitsTests.swift  RepositoryIDTests.swift  RepositoryTests.swift  RepositoryTreeTests.swift  TokenProviderTests.swift  UploadFolderTests.swift  UploadTests.swift
Tests/HuggingFaceTests/Helpers/: MockURLProtocol.swift
Tests/HuggingFaceTests/HubTests/: CacheIntegrityTests.swift  CacheLocationProviderTests.swift  CollectionTests.swift  CommaSeparatedListTests.swift  DatasetTests.swift  DiscussionTests.swift  FileLockTests.swift  FileOperationsTests.swift  GatedModeTests.swift  GitOperationsTests.swift  GitTests.swift  HubCacheTests.swift  HubClientTests.swift  ModelTests.swift  OrganizationTests.swift  PaginationTests.swift  PaperTests.swift  RepoIDTests.swift  RepoTests.swift  SnapshotDownloadTests.swift  SpaceTests.swift  UserTests.swift
Tests/HuggingFaceTests/InferenceProvidersTests/: ChatCompletionTests.swift  FeatureExtractionTests.swift  InferenceClientTests.swift  MessageCodableTests.swift  ProviderTests.swift  SpeechToTextTests.swift  TextToImageTests.swift  TextToVideoTests.swift
Tests/HuggingFaceTests/OAuthTests/: HuggingFaceAuthenticationManagerTests.swift  OAuthClientTests.swift  TokenStorageTests.swift
Tests/HuggingFaceTests/SharedTests/: MultipartBuilderTests.swift
rust/: Cargo.toml  Pin.json  uniffi.toml
rust/src/: lib.rs
rust/src/core/: auth.rs  cache_deletion.rs  cancellation.rs  client.rs  dto.rs  error.rs  globs.rs  mod.rs  progress.rs  repo_id.rs  repository.rs
scripts/: verify-docs.sh
scripts/rust/: check-wrapper-drift.sh  hash-source.sh  regenerate-wrapper.sh
scripts/rust/release/: check-package-swift-pin.sh  check-pin.sh  check-prerelease-pin.sh  cut-release.sh  publish-package-release.sh  rust-release-notes.py
